8366990: Avoid growing ciEnv arena in TypeOopPtr::TypeOopPtr