src/hotspot/share/ci/ciInstanceKlass.cpp
@@ -427,6 +427,33 @@ ciField* ciInstanceKlass::get_field_by_name(ciSymbol* name, ciSymbol* signature,
   return field;
 }
 
+// ------------------------------------------------------------------
+// ciInstanceKlass::get_field_type_by_offset
+BasicType ciInstanceKlass::get_field_type_by_offset(int field_offset, bool is_static) {
+  if (!is_static) {
+    for (int i = 0, len = nof_nonstatic_fields(); i < len; i++) {
+      ciField* field = _nonstatic_fields->at(i);
+      int  field_off = field->offset_in_bytes();
+      if (field_off == field_offset)
+        return field->layout_type();
+    }
+    return T_ILLEGAL;
+  }
+
+  // We avoid allocating a new ciField by obtaining the field type directly
+  VM_ENTRY_MARK;
+  InstanceKlass* k = get_instanceKlass();
+  fieldDescriptor fd;
+  if (!k->find_field_from_offset(field_offset, is_static, &fd)) {
+    return T_ILLEGAL;
+  }
+
+  BasicType field_type = fd.field_type();
+  if (is_reference_type(field_type)) {
+    return T_OBJECT;
+  }
+  return type2field[ciType::make(field_type)->basic_type()];
+}
 
 // ------------------------------------------------------------------
 // ciInstanceKlass::compute_nonstatic_fields
